<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2015. Alex Zhang aka. ztc1997
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~    http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <ztc1997.vibrationtuner.SeekBarPreference
        android:key="pref_global_vib_strength"
        android:title="@string/global_vib_strength_title"
        android:enabled="true"
        android:defaultValue="100"
        monitorBoxEnabled="true"
        minimum="0"
        maximum="200"
        interval="10"
        monitorBoxUnit="%"/>

    <PreferenceCategory android:title="@string/special_vib_title">

        <ztc1997.vibrationtuner.SeekBarPreference
            android:key="pref_long_press_vib_strength"
            android:title="@string/long_press_vib_strength_title"
            android:enabled="true"
            android:defaultValue="100"
            monitorBoxEnabled="true"
            minimum="0"
            maximum="200"
            interval="10"
            monitorBoxUnit="%"/>

        <ztc1997.vibrationtuner.SeekBarPreference
            android:key="pref_virtual_key_vib_strength"
            android:title="@string/virtual_key_vib_strength_title"
            android:enabled="true"
            android:defaultValue="100"
            monitorBoxEnabled="true"
            minimum="0"
            maximum="200"
            interval="10"
            monitorBoxUnit="%"/>

        <ztc1997.vibrationtuner.SeekBarPreference
            android:key="pref_keyboard_tap_vib_strength"
            android:title="@string/keyboard_tap_vib_strength_title"
            android:enabled="true"
            android:defaultValue="100"
            monitorBoxEnabled="true"
            minimum="0"
            maximum="200"
            interval="10"
            monitorBoxUnit="%"/>

        <ztc1997.vibrationtuner.SeekBarPreference
            android:key="pref_clock_tick_vib_strength"
            android:title="@string/clock_tick_vib_strength_title"
            android:enabled="true"
            android:defaultValue="100"
            monitorBoxEnabled="true"
            minimum="0"
            maximum="200"
            interval="10"
            monitorBoxUnit="%"/>

        <ztc1997.vibrationtuner.SeekBarPreference
            android:key="pref_calendar_date_vib_strength"
            android:title="@string/calendar_date_vib_strength_title"
            android:enabled="true"
            android:defaultValue="100"
            monitorBoxEnabled="true"
            minimum="0"
            maximum="200"
            interval="10"
            monitorBoxUnit="%"/>

    </PreferenceCategory>

</PreferenceScreen>